--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -113,43 +113,7 @@ span.navbar-text {
     display: flex;
     align-items: center;
 }
-.social-icon {
-    display: inline-block;
-    margin-left: 14px;
-}
-.social-icon a {
-    width: 42px;
-    height: 42px;
-    background: rgba(217, 217, 217, 0.1);
-    display: inline-flex;
-    border-radius: 50%;
-    margin-right: 6px;
-    align-items: center;
-    justify-content: center;
-    line-height: 1;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-}
-.social-icon a::before {
-    content: "";
-    width: 42px;
-    height: 42px;
-    position: absolute;
-    background-color: #ffffff;
-    border-radius: 50%;
-    transform: scale(0);
-	transition: 0.3s ease-in-out;
-}
-.social-icon a:hover::before {
-    transform: scale(1);
-}
-.social-icon a img {
-	width: 40%;
-	z-index: 1;
-	transition: 0.3s ease-in-out;
-}
-.social-icon a:hover img {
-	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
-}
+
 .navbar-text button {
   font-weight: 700;
   color: #fff;
@@ -384,7 +348,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .project {
   padding: 80px 0;
   position: relative;
-  border-bottom: 2px solid whitesmoke;
 }
 .project h2 {
 	font-size: 45px;
@@ -513,17 +476,27 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: relative;
   width: 80%;
   margin: auto;
+  text-align: center;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
 }
 
 .testimonials h2{
   font-size: 36px;
   font-weight: 700;
-  margin-bottom: 50px;
   color: #fff;
   position: relative;
   z-index: 1;
   padding-bottom: 20px;
-
+}
+.testimonials h3{
+  font-size: 24px;
+  font-weight: 500;
+  color: #fff;
+  position: relative;
+  z-index: 1;
+  padding-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 .userImage {
@@ -641,7 +614,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 700;
   color: #000;
   border-radius: 10% ;
-  border: 2px solid black;
+  border: 2px solid white;
   overflow: hidden;
   background-color: #fff;
   padding: 14px 48px;
@@ -675,13 +648,21 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /************ Footer Css ************/
 .footer {
-  padding: 0 0 50px 0;
+  padding: 80px 0 40px 0;
   background-image: url('../assets/img/footer-bg.png');
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-.newsletter-bx {
+.footer h2{
+  font-size: 36px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  color: #fff;
+
+}
+/* .newsletter-bx {
   background: #FFFFFF;
   border-radius: 55px;
   color: #121212;
@@ -693,8 +674,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 700;
   letter-spacing: 0.5px;
   line-height: 1.2em;
-}
-.new-email-bx {
+} */
+/* .new-email-bx {
   background: #fff;
   padding: 5px;
   border-radius: 20px;
@@ -713,8 +694,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   left: -1px;
   bottom: -1px;
   right: -1px;
-}
-.new-email-bx::after {
+} */
+/* .new-email-bx::after {
   content: "";
   background: #fff;
   border-radius: 20px;
@@ -740,6 +721,48 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   font-weight: 500;
   letter-spacing: 0.5px;
   border-radius: 18px;
+} */
+.contact-footer{
+  text-align: start;
+}
+.contact-footer ul{
+  padding-inline-start: 0px;
+  padding-top: 20px;
+}
+.contact-info {
+  list-style-type: none;
+  /* padding: 20px ; */
+}
+.contact-info li{
+  font-weight: 400;
+  color: #fff !important;
+  letter-spacing: 1px;
+  padding: 5px 0;
+  font-size: 18px;
+  opacity: 0.75;
+}
+
+.sitemap .nav-link{
+  padding-top: 10px;
+}
+
+.quick-links{
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: start;
+  text-decoration: none;
+}
+.quick-links .quick-link{
+  font-size: 14px;
+  text-decoration: none;
+  margin: 0 10px;
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  opacity: 0.75;
+  transition: 0.3s ease-in-out;
+  text-decoration: underline;
+  text-underline-offset: 2px;
 }
 .footer img {
   width: 26%;
@@ -750,4 +773,53 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   color: #B8B8B8;
   letter-spacing: 0.5px;
   margin-top: 20px;
+}
+
+.followw-us{
+  padding: 20px 0;
+}
+.social-icon {
+    display: inline-block;
+    margin-left: 0px;
+}
+.social-icon a {
+    width: 42px;
+    height: 42px;
+    background: rgba(217, 217, 217, 0.1);
+    display: inline-flex;
+    border-radius: 50%;
+    /* margin-top: 40px; */
+    margin-bottom: 20px ;
+    margin-right: 20px;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+}
+.social-icon a::before {
+    content: "";
+    width: 42px;
+    height: 42px;
+    position: absolute;
+    background-color: #ffffff;
+    border-radius: 50%;
+    transform: scale(0);
+	transition: 0.3s ease-in-out;
+}
+.social-icon a:hover::before {
+    transform: scale(1);
+}
+.social-icon a img {
+	width: 40%;
+	z-index: 1;
+	transition: 0.3s ease-in-out;
+}
+.social-icon a:hover img {
+	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
+}
+.footer-end{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 40px;
 }
