--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -288,7 +288,7 @@ nav.navbar.scrolled {
 /* Banner */
 .banner {
   margin-top: 0;
-  padding: 200px 0 60px 0; /* Adjust padding for smaller screens */
+  padding: 300px 0 60px 0; /* Adjust padding for smaller screens */
   background-image: url('../assets/img/banner-bg.png');
   background-position: top center;
   background-size: cover;
@@ -368,7 +368,7 @@ nav.navbar.scrolled {
 /* Responsive */
 @media (max-width: 768px) {
   .banner {
-    padding: 120px 0 40px 0;
+    padding: 200px 0 50px 0;
   }
 
   .banner h1 {
@@ -387,7 +387,7 @@ nav.navbar.scrolled {
   }
 
   .banner button svg {
-    font-size: 18px;
+    font-size: 20px;
     margin-left: 6px;
   }
 }
@@ -397,9 +397,13 @@ nav.navbar.scrolled {
     font-size: 30px;
   }
   .banner h1 {
-    font-size: 60px;
+    font-size: 56px;
+    padding-bottom: 10px;
   }
   .banner p {
+    font-size: 24px;
+  }
+  .banner button{
     font-size: 24px;
   }
 }
@@ -466,6 +470,8 @@ nav.navbar.scrolled {
   padding: 40px 0;
   position: relative;
   background: linear-gradient(90deg, rgba(170, 54, 124, 0.5), rgba(74, 47, 189, 0.5));
+  display: flex;
+  justify-content: center;
 }
 .project h2 {
 	font-size: 40px;
@@ -540,6 +546,9 @@ nav.navbar.scrolled {
   border-radius: 30px;
   overflow: hidden;
   margin-bottom: 24px;
+  display: "flex";
+  justify-content: "center";
+  align-items: "center";
 }
 .proj-imgbx::before {
   content: "";
@@ -735,7 +744,7 @@ nav.navbar.scrolled {
 /************ Blog Css ************/
 
 .blogsComponent{
-  padding: 40px 0 80px;
+  padding: 0 0 80px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -743,12 +752,12 @@ nav.navbar.scrolled {
   align-items: center;
   background: linear-gradient(90deg, rgba(170, 54, 124, 0.5), rgba(74, 47, 189, 0.5));
 }
-.blogsComponent h2{
+/* .blogsComponent h2{
   font-size: 40px;
 	font-weight: 700;
   text-align: center;
-  margin-bottom: 20px;
-}
+  margin-bottom: 40px;
+} */
 
 .blogs{
   width: 90%;
@@ -768,32 +777,11 @@ nav.navbar.scrolled {
 .blogsComponent h2{
   font-size: 36px;
   font-weight: 600;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
   color: #fff;
   position: relative;
 }
-.blog-card-body{
-  background-color: #7F3399;
-}
 
-.blog-card-body .card-title, .card-text{
-  color: whitesmoke
-}
-.blog-card-body Button{
-  background-color: #6d0e8d;
-  transition: all ease-in-out .3s;
-  color: whitesmoke;
-  font-size: 16px;
-  font-weight: 500;
-}
-.blog-card-body Button:hover{
-  background-color: #4b0164;
-  color: #f0f0f0;
-}
-.blog-card-img{
-  border-bottom: 2px solid whitesmoke;
-  border-radius: 0% 0% 2% 2% ;
-}
 
 .blog-card {
   transition: all ease-in-out .32s;
@@ -804,17 +792,41 @@ nav.navbar.scrolled {
   transform: translateY(-10px) scale(1.1);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
-
-.blog-card .image {
+/* .blog-card-img-wrapper{
+  width: 300px;
+} */
+.blog-card-img {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  
+  border-bottom: 2px solid whitesmoke;
+  border-radius: 0% 0% 2% 2% ;
+
 }
 
+.blog-card-body{
+  background-color: #7F3399;
+}
 .blog-card .card-title {
   font-size: 24px;
   font-weight: 700;
   margin-top: 10px;
+}
+
+.blog-card-body .card-title, .card-text{
+  color: whitesmoke
+}
+.blog-card-body Button{
+  background: linear-gradient(90.21deg, #8a1b5d -5.91%, #2f1a8d 111.58%); 
+  transition: all ease-in-out .3s;
+  color: whitesmoke;
+  font-size: 16px;
+  font-weight: 500;
+}
+.blog-card-body Button:hover{
+  background-color: #4b0164;
+  color: #f0f0f0;
 }
 
 
@@ -995,24 +1007,7 @@ nav.navbar.scrolled {
   padding-top: 10px;
 }
 
-.quick-links{
-  display: flex;
-  /* flex-direction: column; */
-  justify-content: start;
-  text-decoration: none;
-}
-.quick-links .quick-link{
-  font-size: 14px;
-  text-decoration: none;
-  margin: 0 10px;
-  color: #fff;
-  font-weight: 500;
-  letter-spacing: 0.5px;
-  opacity: 0.75;
-  transition: 0.3s ease-in-out;
-  text-decoration: underline;
-  text-underline-offset: 2px;
-}
+
 .footer img {
   width: 26%;
 }
@@ -1082,6 +1077,35 @@ nav.navbar.scrolled {
   justify-content: center;
   align-items: center;
   padding-top: 40px;
+  margin: auto;
+}
+.quick-links{
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  text-decoration: none;
+}
+
+.quick-links .quick-link{
+  font-size: 14px;
+  text-decoration: none;
+  margin: 0 10px;
+  color: #fff;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  opacity: 0.75;
+  transition: 0.3s ease-in-out;
+  text-decoration: underline;
+  text-underline-offset: 2px;
+}
+@media (max-width<=576px) {
+  .footer-end{
+    /* display: flex;
+    flex-direction: column; */
+    justify-content: center;
+    /* text-decoration: none;  */
+   }
+  
 }
 
 
