--- a/src/styles/Services.module.css
+++ b/src/styles/Services.module.css
@@ -1,114 +1,45 @@
-/* AIWebsitePage.module.css */
+/* ServicesMenu.module.css */
 
-/* Service Page Container */
-.aiWebsite {
-    background-color: #f8f8f8;
-    padding: 30px;
-  }
-  
-  /* Service Content Card */
-  .card {
-    background-color: #fff;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 20px;
-  }
-  
-  .service-body h1 {
-    color: #333;
-    font-size: 32px;
-    margin-bottom: 10px;
-  }
-  
-  .service-body p {
-    color: #666;
-    font-size: 18px;
-    margin-bottom: 20px;
-  }
-  
-  .service-body h2 {
-    color: #333;
-    font-size: 24px;
-    margin-top: 20px;
-  }
-  
-  .service-body ul {
-    color: #666;
-    font-size: 18px;
-    margin-top: 10px;
-  }
-  
-  /* Recent Projects Carousel */
-  .carousel {
-    margin-top: 30px;
-  }
-  
-  .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.7);
-    padding: 10px 20px;
-    border-radius: 0 0 4px 4px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-  }
-  
-  .carousel-caption h3 {
-    color: #fff;
-    font-size: 20px;
-  }
-  
-  /* Service Image */
-  .service-image {
-    border-radius: 8px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* Responsive Styles */
-  @media (max-width: 768px) {
-    /* Adjust padding and font sizes for smaller screens */
-    .card {
-      padding: 15px;
-    }
-  
-     .service-body h1 {
-      font-size: 28px;
-    }
-  
-    .service-body p {
-      font-size: 16px;
-    }
-  
-    .service-body h2 {
-      font-size: 22px;
-    }
-  
-    .service-body ul {
-      font-size: 16px;
-    }
-  }
-  
-  @media (max-width: 576px) {
-    /* Further adjustments for even smaller screens */
-    .card {
-      padding: 10px;
-    }
-  
-    .service-body h1 {
-      font-size: 24px;
-    }
-  
-    .service-body p {
-      font-size: 14px;
-    }
-  
-    .service-body h2 {
-      font-size: 20px;
-    }
-  
-    .service-body ul {
-      font-size: 14px;
-    }
-  }
-  
+/* --------- Navbar dropdown --------- */
+
+.dropdownMenu {
+  background-color: #121212;
+  padding: 10px 10px !important;
+  margin: -10px 0 !important;
+  border-bottom: 3px solid white;
+  border-radius: 5px;
+}
+.nav_link {
+  white-space: nowrap;
+  text-decoration: none;
+  text-align: start;
+  padding: 7px 10px;
+  color: rgb(190, 190, 190);
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  display: inline-block;
+  transition: 0.2s ease-in-out;
+}
+
+.nav_link:hover {
+  color: #fff;
+  background-color: rgb(39, 39, 39);
+  border-radius: 5px;
+}
+
+/* .dropdownOpen {
+  max-height: 500px;
+  opacity: 1;
+  transition: max-height 0.3s ease-in, opacity 0.3s ease-in;
+}
+
+.dropdownClosed {
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out, opacity 0.3s ease-out;
+} */
+
+/*-------------- Services Page ---------------  */
+/* some styling is global */
