--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1223,7 +1223,7 @@ nav.navbar.scrolled {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   /* padding: 20px; */
   text-align: start;
 }
